# HackerOS-Steam

./: LICENSE  README.md  build.hacker  build.hl
cli/: main.cr  shard.yml
container/: Cargo.toml  Containerfile  shard.yml
container/src/: main.cr  main.rs
gui/: meson.build
gui/src/: main.vala
source-code/cli/: shard.yml
source-code/cli/src/: colors.cr  container.cr  main.cr  ui.cr
source-code/gui/: main.vala  meson.build  run.hacker  shard.yml
source-code/gui/data/: io.hackeros.steam.desktop
source-code/gui/src/: main.cr  main.vala
source-code/tui/: go.mod  main.go
tui/: go.mod  main.go
