[package]
name = "container"
version = "0.1.0"
edition = "2021"
description = "Profesjonalny kontener Steam dla HackerOS – maksymalna wydajność i bezpieczeństwo"
license = "GPL-3.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
podman-api = { version = "0.11", features = ["swagger"] }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["fs", "user", "process"] }
whoami = "1.5"
dirs = "5.0"
sysinfo = "0.30"
regex = "1.10"
once_cell = "1.19"
